[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "particle_lab"
version = "0.0.1"
description = "physics based particle simulator"
authors = [{name = "fenn-core"}]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "numpy-typing>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
